Schedule tweet and publish tweet added
