# src/twitter/infrastructure/tweet_dto.py
@@ -1,0 +1,9 @@
+from typing import TypedDict
+
+
+class TweetDTO(TypedDict):
+
+    tweetId: str
+    accountId: str
+    description: str
+    publicationDate: int
